--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
     <head>
         <meta charset="UTF-8">
-        <title>Barbearia Alura</title>
+        <title>Colégio Estadual Pedro Marcondes Ribas</title>
         <link rel="stylesheet" href="style.css">
     </head>
 
@@ -10,9 +10,9 @@
         <img id="banner" src="banner.jpg">
 
        <div class="principal">
-    <h1>Sobre a Barbearia Alura</h1>
+    <h1>Sobre o Colégio (Cepemar)</h1>
 
-    <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. 
+    <p>Localizada no Distrito do Novo Barro Preto, dentro do município de Ventania, <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. 
     Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
 
     <p id="missao"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
