--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
        <div class="principal">
     <h1>Sobre o Colégio (Cepemar)</h1>
 
-    <p>Localizada no Distrito do Novo Barro Preto, dentro do município de Ventania, <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. 
-    Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
+    <p>Localizada no Distrito do Novo Barro Preto, dentro do município de Ventania, <strong>o Colégio Cepemar,</strong> traz para o município a educação de qualidade, conforto e desenvolvimento para seus alunos. Fundada no ano de 1993, </p>
 
-    <p id="missao"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
+    <p id="missao"><em> <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
 
     <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. 
     O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
@@ -25,9 +24,9 @@
     <h2>Benefícios</h2>
 
     <ul>
-        <li class="itens">Atendimento aos Clientes</li>
-        <li class="itens">Espaço diferenciado</li>
-        <li class="itens">Localização</li>
+        <li class="itens">Avenida do Cerne, 1687./li>
+        <li class="itens">Novo Barro Preto/li>
+        <li class="itens">Fundamental e Médio/li>
         <li class="itens">Profissionais Qualificados</li>
     </ul>
 
