--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
 
     <p id="missao"><em> <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
 
-    <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. 
-    O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
+    <p>O Colégio é localizado em área urbana, com as etapas do ensino fundamental e médio, contém cerca de 29 turmas, mais de 480 matrícolas, uma infraestrutura completa para seus alunos por exemplo.</p>
 </div>
 
 <div class="beneficios">
