--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
        <div class="principal">
     <h1>Sobre o Colégio (Cepemar)</h1>
 
-    <p>Localizada no Distrito do Novo Barro Preto, dentro do município de Ventania, <strong>o Colégio Cepemar,</strong> traz para o município a educação de qualidade, conforto e desenvolvimento para seus alunos. Fundada no ano de 1993, </p>
+    <p>Localizada no Distrito do Novo Barro Preto, dentro do município de Ventania, <strong>o Colégio Cepemar,</strong> traz para o município a educação de qualidade, conforto e desenvolvimento para seus alunos. Fundada em dezembro do ano de 1996, </p>
 
     <p id="missao"><em> <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
 
-    <p>O Colégio é localizado em área urbana, com as etapas do ensino fundamental e médio, contém cerca de 29 turmas, mais de 480 matrícolas, uma infraestrutura completa para seus alunos por exemplo.</p>
+    <p>O Colégio é localizado em área urbana, com as etapas do ensino fundamental e médio, contém cerca de 29 turmas, mais de 480 matrícolas, uma infraestrutura completa para seus alunos como; Alimentação fornecida, Escola com Acessibilidade
+     Dependências com Acessibilidade, Sanitário com Acessibilidade, Alimentação fornecida, Água filtrada, Sanitário dentro da escola, Cozinha, Láb. Informática, Quadra de Esportes, Sala da Diretoria, Sala de Professores, Sala de Atendimento Especial entre outros. </p>
 </div>
 
 <div class="beneficios">
