--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <p id="missao"><em> <strong>"educação de qualidade"</strong>.</em></p>
 
     <p>O Colégio é localizado em área urbana, com as etapas do ensino fundamental e médio, contém cerca de 29 turmas, mais de 480 matrícolas, uma infraestrutura completa para seus alunos como; Alimentação fornecida, Escola com Acessibilidade
-     Dependências com Acessibilidade, Sanitário com Acessibilidade, Alimentação fornecida, Água filtrada, Sanitário dentro da escola, Cozinha, Láb. Informática, Quadra de Esportes, Sala da Diretoria, Sala de Professores, Sala de Atendimento Especial, entre outros. </p>
+     Dependências com Acessibilidade, Sanitário com Acessibilidade, Alimentação fornecida, Água filtrada, Sanitário dentro da escola, Cozinha, Laboratório de Informática, Quadra de Esportes, Sala da Diretoria, Sala de Professores, Sala de Atendimento Especial, entre outros. </p>
 </div>
 
 <div class="beneficios">
