--- a/index.html
+++ b/index.html
@@ -21,7 +21,33 @@
 </div>
 
 <div class="beneficios">
-    <h2>Benefícios</h2>
+    <h2>Diciplinas ofertadas;
+        Ensino Fundamental:
+        Língua/ Literatura Portuguesa
+        Educação Física
+        Artes (Educação Artística, Teatro, Dança, Música, Artes Plásticas e outras)
+        Língua/ Literatura estrangeira - Inglês
+        Matemática
+        Ciências
+        História
+        Geografia
+        Ensino Religioso
+
+        Ensino Médio:
+        Língua/ Literatura Portuguesa
+Educação Física
+Artes (Educação Artística, Teatro, Dança, Música, Artes Plásticas e outras)
+Língua/ Literatura estrangeira - Inglês
+Matemática
+Física
+Química
+Biologia
+História
+Geografia
+Sociologia
+Filosofia
+Estudos Sociais ou Sociologia
+    </h2>
 
     <ul>
         <li class="itens">Avenida do Cerne, 1687./li>
