--- a/index.html
+++ b/index.html
@@ -58,5 +58,5 @@ Estudos Sociais ou Sociologia
     </ul>
 
 
-    <img src="beneficios.jpg" class="imagembeneficios">
+    <img src="benefícios.jpg" class="imagembeneficios">
 </div>
