--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
 
 <div class="beneficios">
     <h2>Diciplinas ofertadas;
+        <ul>
         Ensino Fundamental:
-        Língua/ Literatura Portuguesa
+        <li>Língua/ Literatura Portuguesa</li>
         Educação Física
         Artes (Educação Artística, Teatro, Dança, Música, Artes Plásticas e outras)
         Língua/ Literatura estrangeira - Inglês
@@ -32,6 +33,7 @@
         História
         Geografia
         Ensino Religioso
+        </ul>
 
         Ensino Médio:
         Língua/ Literatura Portuguesa
