--- a/index.html
+++ b/index.html
@@ -35,9 +35,10 @@
         Ensino Religioso
         </ul>
 
+        <ul>   
         Ensino Médio:
-        Língua/ Literatura Portuguesa
-Educação Física
+        <li>Língua/ Literatura Portuguesa
+        Educação Física
 Artes (Educação Artística, Teatro, Dança, Música, Artes Plásticas e outras)
 Língua/ Literatura estrangeira - Inglês
 Matemática
@@ -48,8 +49,10 @@ História
 Geografia
 Sociologia
 Filosofia
-Estudos Sociais ou Sociologia
-    </h2>
+Estudos Sociais ou Sociologia</li>
+        </ul>
+   
+</h2>
 
     <ul>
         <li class="itens">Avenida do Cerne, 1687./li>
