--- a/index.html
+++ b/index.html
@@ -25,31 +25,32 @@
         <ul>
         Ensino Fundamental:
         <li>Língua/ Literatura Portuguesa</li>
-        Educação Física
-        Artes (Educação Artística, Teatro, Dança, Música, Artes Plásticas e outras)
-        Língua/ Literatura estrangeira - Inglês
-        Matemática
-        Ciências
-        História
-        Geografia
-        Ensino Religioso
+        <li>educação Física </li>
+        <li>Artes (Educação Artística, Teatro, Dança, Música, Artes Plásticas e outras)
+            Língua/ Literatura estrangeira - Inglês</li>
+        <li>Matemática</li>
+        <li>Ciências</li>
+        <li>História</li>
+        <li>Geografia</li>
+        <li>Ensino Religioso</li>
         </ul>
 
         <ul>   
         Ensino Médio:
         <li>Língua/ Literatura Portuguesa
-        Educação Física
-Artes (Educação Artística, Teatro, Dança, Música, Artes Plásticas e outras)
-Língua/ Literatura estrangeira - Inglês
-Matemática
-Física
-Química
-Biologia
-História
-Geografia
-Sociologia
-Filosofia
-Estudos Sociais ou Sociologia</li>
+        Educação Física</li>
+        <li> Artes (Educação Artística, Teatro, Dança, Música, Artes Plásticas e outras)
+            Língua/ Literatura estrangeira - Inglês</li>
+        <li>Matemática</li>
+        <li>Física</li>
+        <li>Química</li>
+        <li>Biologia</li>
+        <li>História</li>
+        <li>Geografia</li>
+        <li>Filosofia</li>
+        <li>sociologia</li>
+        <li>>Estudos Sociais ou Sociologia</li
+        <li>Novo Ensino Médio(Educação Finaceira, Pensamento Computacional, Projeto de vida).</li>    
         </ul>
    
 </h2>
