--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <li>Geografia</li>
         <li>Filosofia</li>
         <li>sociologia</li>
-        <li>>Estudos Sociais ou Sociologia</li>
+        <li>Estudos Sociais ou Sociologia</li>
         <li>Novo Ensino Médio(Educação Finaceira, Pensamento Computacional, Projeto de vida).</li>  
         </ul>
    
