--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
        <div class="principal">
     <h1>Sobre o Colégio (Cepemar)</h1>
 
-    <p>Localizada no Distrito do Novo Barro Preto, dentro do município de Ventania, <strong>o Colégio Cepemar,</strong> traz para o município a educação de qualidade, conforto e desenvolvimento para seus alunos. Fundada em dezembro do ano de 1996, </p>
+    <p>Localizada no Distrito do Novo Barro Preto, dentro do município de Ventania, <strong>o Colégio Cepemar,</strong> traz para o município a educação de qualidade, conforto e desenvolvimento para seus alunos. Fundada em dezembro do ano de 1996. </p>
 
     <p id="missao"><em> <strong>"Capacitação e valorização dos professores, Adoção de uma plataforma de ensino, Desenvolvimento das habilidades sociemocionais do aluno, manutenção do espaço físico, melhora do ambiente educativo"</strong>.</em></p>
 
