--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
 </h2>
 
     <ul>
-        <li class="itens">Avenida do Cerne, 1687./li>
-        <li class="itens">Novo Barro Preto/li>
-        <li class="itens">Fundamental e Médio/li>
+        <li class="itens">Avenida do Cerne, 1687.</li>
+        <li class="itens">Novo Barro Preto</li>
+        <li class="itens">Fundamental e Médio</li>
         <li class="itens">Profissionais Qualificados</li>
     </ul>
 
