--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <p id="missao"><em> <strong>"Capacitação e valorização dos professores, Adoção de uma plataforma de ensino, Desenvolvimento das habilidades sociemocionais do aluno, manutenção do espaço físico, melhora do ambiente educativo"</strong>.</em></p>
 
-    <p>O Colégio é localizado em área urbana, com as etapas do ensino fundamental e médio, contém cerca de 29 turmas, mais de 480 matrícolas, uma infraestrutura completa para seus alunos como; Alimentação fornecida, Escola com Acessibilidade
+    <p>O Colégio é localizado em área urbana, com as etapas do ensino fundamental e médio, contém cerca de 29 turmas, mais de 480 matrícolas, uma infraestrutura completa para seus alunos como; Alimentação fornecida, Escola com Acessibilidade,
      Dependências com Acessibilidade, Sanitário com Acessibilidade, Alimentação fornecida, Água filtrada, Sanitário dentro da escola, Cozinha, Laboratório de Informática, Quadra de Esportes, Sala da Diretoria, Sala de Professores, Sala de Atendimento Especial, entre outros. </p>
 </div>
 
